# psyko

./: CMakeLists.txt  kopete_psyko.desktop  kopete_psyko_configuration.desktop  psykoconfiguration.kcfg  psykoconfiguration.kcfgc  psykoplugin.cpp  psykoplugin.h  psykopreferences.cpp  psykopreferences.h  psykopreferences.ui
src/: CMakeLists.txt  kopete_psyko.desktop  psykoconfiguration.kcfg  psykoplugin.cpp  psykoplugin.h  psykopreferences.cpp  psykopreferences.h  psykopreferences.ui
